$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-15 (opened November 1, 2010)

	* Self-starting nls() models for species-area relationship: added
	Gitay and Lomolino models from Dengler 2009 (J Biogeog 36,
	728-744). Some more should be added, but these were among the best
	in Dengler's simulation. The starting values of the Lomolino model
	(SSlomolino) need work, as do several other candidate models. The
	purpose is to use these also in fitspecaccum(). 

	* rda: the scaling 'const' can now be a vector of two items: the
	first is used for species and the second for sites. This allows
	compatibility with Canoco 3.x (but Canoco 4 changed scaling): if
	'mod' is an rda() result, and 'nr' is the number of rows in data,
	then "scaling = -2, const = c(sqrt(nr-1), sqrt(nr))" in scores(),
	summary() or plot() will use default scaling of Canoco 3.x. Help
	page now points to decision vignette explaining scaling and
	'const' (and the vignette needs updating).

	* prc: coefficients folded in a wrong way. Diagnosed, reported and
	fixed by Cajo ter Braak. CtB also fixed the scaling of species
	scores and coefficients to be more consistent with Canoco and
	common standards. The function now ignores user settings of
	contrasts and will always use treatment contrasts. Cajo ter Braak
	is now recognized as a co-author of the function.

	* nestednodf: breaks ties in column and row totals by row sums and
	column sums in quantitative data ('weighted = TRUE'). Version
	submitted by Gustavo Carvalho in a follow-up to Feature Request
	#1097. 

Version 1.18-14 (closed November 1, 2010)

	* treedist: works now with zero-height trees (for instance, only
	one item in a tree).  Function gained a new argument 'relative'
	(defaults TRUE): if FALSE, finds raw dissimilarities of tree
	heights.  Help page now tells that tree distances are in range
	0..2 instead of 0..1, since combining two trees may add a new
	common root.
